--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Hello World</string>
-
+    <string name="forecast_details">Forecast Details</string>
     <string name="zipcode_entry_error">Please enter valid zipcode</string>
-    <string name="forecast_clicked_format">Forecast: %1$.2 %2$sf</string>
+    <string name="forecast_clicked_format">Forecast: %1$.2f %2$s</string>
 </resources>
