--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="forecast_details">Forecast Details</string>
     <string name="zipcode_entry_error">Please enter valid zipcode</string>
     <string name="forecast_clicked_format">Forecast: %1$.2f %2$s</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
